[project]
name = "land-then-transport"
version = "0.1.0"
description = "Flow matching-based generative decoding for wireless image transmission"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Jingwen Fu" },
    { name = "Ming Xiao" },
    { name = "Mikael Skoglund" },
    { name = "Dong In Kim" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26,<2",
    "Pillow>=10",
    "torch>=2.1,<3",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.16",
    "tqdm>=4.66",
]

[project.optional-dependencies]
metrics = [
    "pytorch-msssim>=1.0",
    "torchmetrics>=1.6",
]
tracking = [
    "wandb>=0.18",
]
dev = [
    "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flow_matching*", "ltt*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"flow_matching/models/fp16_util.py" = ["E741"]
"flow_matching/models/logger.py" = ["UP031"]
