[project]
name = "land-then-transport"
version = "0.1.0"
description = "Flow matching-based generative decoding for wireless image transmission"
readme = "README.md"
requires-python = ">=3.11"
license = "CC-BY-NC-SA-4.0"
license-files = [
    "LICENSE",
    "NOTICE",
    "third_party/LICENSE-guided-diffusion",
    "third_party/LICENSE-meta-flow-matching",
]
authors = [
    { name = "Jingwen Fu" },
    { name = "Ming Xiao" },
    { name = "Mikael Skoglund" },
    { name = "Dong In Kim" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26,<2",
    "Pillow>=10",
    "torch>=2.1,<3",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.16",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/JingwenFu1018/Land-then-Transport"
Repository = "https://github.com/JingwenFu1018/Land-then-Transport"
Paper = "https://doi.org/10.1109/TWC.2026.3710439"
Preprint = "https://arxiv.org/abs/2601.07512"

[project.optional-dependencies]
metrics = [
    "pytorch-msssim>=1.0",
    "torchmetrics>=1.6",
]
tracking = [
    "wandb>=0.18",
]
dev = [
    "build>=1.2",
    "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["train", "evaluate"]

[tool.setuptools.packages.find]
where = ["."]
include = ["flow_matching*", "ltt*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"flow_matching/models/fp16_util.py" = ["E741"]
"flow_matching/models/logger.py" = ["UP031"]
